--- a/Index.html
+++ b/Index.html
@@ -14,38 +14,40 @@
 <body>
     <header>
         <section id="Navbar">
-            <div class="navbar navbar-expand-sm navbar-light">
-                <div class="Logo d-flex">
-                    <img src="Assets/Img/Logo.jpg" alt="">
-                </div>
-                <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColl" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="fas fa-bars"> </span>
-                </button>
+            <div class="navbar navbar-expand-md navbar-light">
+                <div class="container">
+                    <div class="Logo d-flex">
+                        <img src="Assets/Img/Logo3.png" alt="">
+                    </div>
+                    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColl" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                       <span class="fas fa-bars"> </span>
+                   </button>
 
-                <div class="collapse navbar-collapse align-content-center" id="navbarColl">
-                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Menu</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Reservation</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
+                    <div class="collapse navbar-collapse align-content-center" id="navbarColl">
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Menu</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Reservation</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
 
-                    </ul>
-                    <!-- <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form> -->
+                        </ul>
+                        <!-- <form class="form-inline my-2 my-lg-0">
+                           <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                       </form> -->
+                    </div>
                 </div>
             </div>
         </section>
