--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
                     </div>
                     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColl" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                       <span class="fas fa-bars"> </span>
+                       <span class="fas fa-bars"> Menu</span>
                    </button>
 
                     <div class="collapse navbar-collapse align-content-center" id="navbarColl">
@@ -76,14 +76,103 @@
             </div>
             <!-- or ul.my-slider > li -->
         </section>
+        <section id="Featured">
+            <div class="container">
+                <h3>New Menus</h3>
+                <div class="row">
+                    <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">
+                        <div class="Featured-card mr-5">
+                            <a href="#" class="img_container">
+                                <img src=" Assets/Img/Features.jpg ">
+
+                            </a>
+                            <div class="Featured-card-title ">
+                                <a href="# ">
+                                    <h4> Shusi Shusi</h4>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">
+                        <div class="Featured-card mr-5">
+                            <a href="#" class="img_container">
+                                <img src=" Assets/Img/Features.jpg ">
+
+                            </a>
+                            <div class="Featured-card-title ">
+                                <a href="# ">
+                                    <h4> Shusi Shusi</h4>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">
+                        <div class="Featured-card mr-5">
+                            <a href="#" class="img_container">
+                                <img src=" Assets/Img/Features.jpg ">
+
+                            </a>
+                            <div class="Featured-card-title ">
+                                <a href="# ">
+                                    <h4> Shusi Shusi</h4>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">
+                        <div class="Featured-card mr-5">
+                            <a href="#" class="img_container">
+                                <img src=" Assets/Img/Features.jpg">
+
+                            </a>
+                            <div class="Featured-card-title ">
+                                <a href="# ">
+                                    <h4> Shusi Shusi</h4>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <section id="About">
+            <div class="container">
+                <h3>About Us</h3>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="about-img-container">
+                            <img src="Assets/Img/sm16.jpg" alt="" width="400px">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="about-txt-container">
+                            <h4 class="head">
+                                Lorem ipsum
+                            </h4>
+                            <p class="title">
+                                Lorem ipsum Lorem ipsumLorem ipsumLorem ipsum
+                            </p>
+                            <p class="about-content">
+                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/3818e49a5f.js" crossorigin="anonymous"></script>
-    <script src="Assets/owlcarousel/owl.carousel.js"></script>
-    <script src="Assets/Js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
+    <script src="https://kit.fontawesome.com/3818e49a5f.js " crossorigin="anonymous "></script>
+    <script src="Assets/owlcarousel/owl.carousel.js "></script>
+    <script src="Assets/Js/script.js "></script>
 </body>
 
 </html>
