footer and some fix

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <link rel="stylesheet" href="Assets/owlcarousel/assets/owl.carousel.min.css">
+
     <link rel="stylesheet" href="Assets/owlcarousel/assets/owl.theme.default.min.css">
 
     <link rel="stylesheet" href="Assets/Style/style.css">
@@ -83,7 +84,7 @@
                     <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">
                         <div class="Featured-card mr-5">
                             <a href="#" class="img_container">
-                                <img src=" Assets/Img/Features.jpg ">
+                                <img src=" Assets/Img/Features.jpg" width="100%">
 
                             </a>
                             <div class="Featured-card-title ">
@@ -97,7 +98,7 @@
                     <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">
                         <div class="Featured-card mr-5">
                             <a href="#" class="img_container">
-                                <img src=" Assets/Img/Features.jpg ">
+                                <img src=" Assets/Img/Features.jpg" width="100%">
 
                             </a>
                             <div class="Featured-card-title ">
@@ -111,7 +112,7 @@
                     <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">
                         <div class="Featured-card mr-5">
                             <a href="#" class="img_container">
-                                <img src=" Assets/Img/Features.jpg ">
+                                <img src=" Assets/Img/Features.jpg" width="100%">
 
                             </a>
                             <div class="Featured-card-title ">
@@ -125,7 +126,7 @@
                     <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">
                         <div class="Featured-card mr-5">
                             <a href="#" class="img_container">
-                                <img src=" Assets/Img/Features.jpg">
+                                <img src=" Assets/Img/Features.jpg" width="100%">
 
                             </a>
                             <div class="Featured-card-title ">
@@ -144,9 +145,9 @@
             <div class="container">
                 <h3>About Us</h3>
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 about-img-col">
                         <div class="about-img-container">
-                            <img src="Assets/Img/sm16.jpg" alt="" width="400px">
+                            <img src="Assets/Img/sm16.jpg" alt="" width="100%">
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -166,11 +167,44 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section id="Footer">
+            <div class="footer-dark">
+                <footer>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-6 col-md-3 item">
+                                <h3>Services</h3>
+                                <ul>
+                                    <li><a href="#">Web design</a></li>
+                                    <li><a href="#">Development</a></li>
+                                    <li><a href="#">Hosting</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-6 col-md-3 item">
+                                <h3>About</h3>
+                                <ul>
+                                    <li><a href="#">Company</a></li>
+                                    <li><a href="#">Team</a></li>
+                                    <li><a href="#">Careers</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6 item text">
+                                <h3>Station Restaurant</h3>
+                                <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in justo.</p>
+                            </div>
+                            <!-- <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div> -->
+                        </div>
+                        <p class="copyright">Station Restaurant © 2022</p>
+                    </div>
+                </footer>
+            </div>
+        </section>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
-    <script src="https://kit.fontawesome.com/3818e49a5f.js " crossorigin="anonymous "></script>
+    <script src="https://kit.fontawesome.com/3818e49a5f.js" crossorigin="anonymous"></script>
     <script src="Assets/owlcarousel/owl.carousel.js "></script>
     <script src="Assets/Js/script.js "></script>
 </body>
