some fix and menu

--- a/Index.html
+++ b/Index.html
@@ -7,10 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
-    <link rel="stylesheet" href="Assets/owlcarousel/assets/owl.carousel.min.css">
-
-    <link rel="stylesheet" href="Assets/owlcarousel/assets/owl.theme.default.min.css">
-
+    <link rel="stylesheet" href="Assets/Style/owl.carousel.min.css">
+    <link rel="stylesheet" href="Assets/Style/owl.theme.default.min.css">
     <link rel="stylesheet" href="Assets/Style/style.css">
 
 
@@ -33,10 +31,10 @@
                     <div class="collapse navbar-collapse align-content-center" id="navbarColl">
                         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Home</a>
+                                <a class="nav-link" href="Index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Menu</a>
+                                <a class="nav-link" href="Menu.html">Menu</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Reservation</a>
@@ -200,12 +198,13 @@
                 </footer>
             </div>
         </section>
+
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
     <script src="https://kit.fontawesome.com/3818e49a5f.js" crossorigin="anonymous"></script>
-    <script src="Assets/owlcarousel/owl.carousel.js "></script>
+    <script src="Assets/Js/owl.carousel.js "></script>
     <script src="Assets/Js/script.js "></script>
 </body>
 
