--- a/Menu.html
+++ b/Menu.html
@@ -57,11 +57,61 @@
   </section>
 </header>
 <main>
+  <section id="Menu-logo">
+    <div class="menu-logo-container">
+      <img src="Assets/Img/PinClipart.com_header-clipart_101429.png" height="150">
+    </div>
+  </section>
 
 <section id="Menu" class="menu">
 <div class="container">
   <div class="row">
     <div class="col-lg-7 col-md-12">
+      <div class="menu-item">
+        <div class="menu-img">
+          <img src="Assets/img/menu-beverage.jpg" alt="Image">
+        </div>
+        <div class="menu-text">
+          <h3><span>Single Cup Brew</span> <strong>$7.00</strong></h3>
+          <p>Lorem ipsum dolor sit amet elit. Phasel nec preti facil</p>
+        </div>
+      </div>
+      <div class="menu-item">
+        <div class="menu-img">
+          <img src="Assets/img/menu-beverage.jpg" alt="Image">
+        </div>
+        <div class="menu-text">
+          <h3><span>Caffe Americano</span> <strong>$9.00</strong></h3>
+          <p>Lorem ipsum dolor sit amet elit. Phasel nec preti facil</p>
+        </div>
+      </div>
+      <div class="menu-item">
+        <div class="menu-img">
+          <img src="Assets/img/menu-beverage.jpg" alt="Image">
+        </div>
+        <div class="menu-text">
+          <h3><span>Caramel Macchiato</span> <strong>$15.00</strong></h3>
+          <p>Lorem ipsum dolor sit amet elit. Phasel nec preti facil</p>
+        </div>
+      </div>
+      <div class="menu-item">
+        <div class="menu-img">
+          <img src="Assets/img/menu-beverage.jpg" alt="Image">
+        </div>
+        <div class="menu-text">
+          <h3><span>Standard black coffee</span> <strong>$8.00</strong></h3>
+          <p>Lorem ipsum dolor sit amet elit. Phasel nec preti facil</p>
+        </div>
+      </div>
+      <div class="menu-item">
+        <div class="menu-img">
+          <img src="Assets/img/menu-beverage.jpg" alt="Image">
+        </div>
+        <div class="menu-text">
+          <h3><span>Standard black coffee</span> <strong>$12.00</strong></h3>
+          <p>Lorem ipsum dolor sit amet elit. Phasel nec preti facil</p>
+        </div>
+      </div>
       <div class="menu-item">
         <div class="menu-img">
           <img src="Assets/img/menu-beverage.jpg" alt="Image">
