--- a/Index.html
+++ b/Index.html
@@ -150,27 +150,28 @@
                          style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
                         <div class="card-description">
                         </div>
-                        <a class="card-link" href="#galery"> </a>
+                        <a class="card-link" href="Gallery.html"> </a>
                     </div>
                 </div>
-                <div class="col-md-4  col-sm-12">
+                <div class="col-md-4 col-sm-12">
                     <div class="card"
                          style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
                         <div class="card-description">
                         </div>
-                        <a class="card-link" href="#galery"> </a>
+                        <a class="card-link" href="Gallery.html"> </a>
                     </div>
                 </div>
-                <div class="col-md-4  col-sm-12">
+                <div class="col-md-4 col-sm-12">
                     <div class="card"
                          style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
                         <div class="card-description">
                         </div>
-                        <a class="card-link" href="#galery"> </a>
+                        <a class="card-link" href="Gallery.html"> </a>
                     </div>
                 </div>
+
             </div>
-            <p><a href="#galery">See All</a></p>
+            <a href="Gallery.html"> <p>See All</p></a>
         </div>
         </div>
     </section>
