--- a/Menu.html
+++ b/Menu.html
@@ -58,10 +58,13 @@
 </header>
 <main>
   <section id="Menu-logo">
-    <div class="menu-logo-container">
-      <img src="Assets/Img/PinClipart.com_header-clipart_101429.png" height="150">
+    <div class="row">
+      <div class="menu-logo-container col-lg-12">
+        <img src="Assets/Img/PinClipart.com_header-clipart_101429.png" >
+      </div>
     </div>
-  </section>
+
+  <menu-img-container/section>
 
 <section id="Menu" class="menu">
 <div class="container">
@@ -158,9 +161,9 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-5">
+    <div class="col-lg-5 col-md-12">
       <div class="menu-img-container">
-        <img src="Assets/Img/menudrinksm1.jpg" alt="" >
+        <img src="Assets/Img/menudrinksm1.jpg"  class=" " alt="" >
       </div>
     </div>
   </div>
