--- a/Gallery.html
+++ b/Gallery.html
@@ -59,91 +59,186 @@
     </section>
 </header>
 <main>
-<section>
-    <div class="container">
-    <div class="container">
-    <div class="container">
-    <div class="card-columns">
-        <div class="card "> <img class="card-img-top" src="Assets/Img/sm5.jpg" alt="Card image cap"> </div>
-        <div class="card "> <img class="card-img-top" src="Assets/Img/sm16.jpg" alt="Card image cap"> </div>
-        <div class="card "> <img class="card-img-top" src="Assets/Img/sm4.jpg" alt="Card image cap"> </div>
-        <div class="card "> <img class="card-img-top" src="Assets/Img/menudrinksm1.jpg" alt="Card image cap"> </div>
-        <div class="card "> <img class="card-img-top" src="Assets/Img/Logo.jpg" alt="Card image cap"> </div>
-        <div class="card "> <img class="card-img-top" src="Assets/Img/sm8.jpg" alt="Card image cap"> </div>
+<section class="menu-galery">
+    <div class="Galery-container ">
+        <h3>Gallery</h3>
+        <div class="container  galery-container">
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+            <div class="card"
+                 style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                <div class="card-description">
+                </div>
+                <a class="card-link" href="Gallery.html"> </a>
+            </div>
+        </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card"
+                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                    <div class="card-description">
+                    </div>
+                    <a class="card-link" href="Gallery.html"> </a>
+                </div>
+            </div>
 
 
 
-
+        </div>
+        <a href="Gallery.html"> <p>@todo pagination</p></a>
     </div>
-    </div>
-    </div>
+
 </section>
-    <style>
-        body {
-            padding: 2em;
-        }
-        .card {
-            border: none;
-        }
-        img,
-        .card-img-top {
-            border-radius: 0em;
-        }
-        @media (min-width: 576px) {
-            .card-columns {
-                column-count: 2;
-            }
-        }
-        @media (min-width: 768px) {
-            .card-columns {
-                column-count: 3;
-            }
-        }
-        @media (min-width: 992px) {
-            .card-columns {
-                column-count: 4;
-            }
-        }
-        @media (min-width: 1200px) {
-            .card-columns {
-                column-count: 5;
-            }
-        }
-    </style>
-<!--    <section id="Galery">-->
-<!--        <div class="Galery-container">-->
-<!--            <h3>Gallery</h3>-->
-<!--            <div class="container  galery-container">-->
-<!--                <div class="col-md-4 col-sm-12">-->
-<!--                    <div class="card"-->
-<!--                         style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">-->
-<!--                        <div class="card-description">-->
-<!--                        </div>-->
-<!--                        <a class="card-link" href="#galery"> </a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-md-4  col-sm-12">-->
-<!--                    <div class="card"-->
-<!--                         style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">-->
-<!--                        <div class="card-description">-->
-<!--                        </div>-->
-<!--                        <a class="card-link" href="#galery"> </a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-md-4  col-sm-12">-->
-<!--                    <div class="card"-->
-<!--                         style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">-->
-<!--                        <div class="card-description">-->
-<!--                        </div>-->
-<!--                        <a class="card-link" href="#galery"> </a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <a href="#galery"> <p>See All</p></a>-->
-<!--        </div>-->
-<!--        </div>-->
-<!--    </section>-->
-
 </main>
 <footer>
     <section id="Footer">
