--- a/Gallery.html
+++ b/Gallery.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <link rel="stylesheet" href="Assets/Style/owl.carousel.min.css">
     <link rel="stylesheet" href="Assets/Style/owl.theme.default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css" integrity="sha512-kwJUhJJaTDzGp6VTPBbMQWBFUof6+pv0SM3s8fo+E6XnPmVmtfwENK0vHYup3tsYnqHgRDoBDTJWoq7rnQw2+g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="Assets/Style/style.css">
 
 
@@ -59,187 +60,58 @@
     </section>
 </header>
 <main>
-<section class="menu-galery">
-    <div class="Galery-container ">
-        <h3>Gallery</h3>
-        <div class="container  galery-container">
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
+    <section class="menu-galery">
+        <div class="Galery-container ">
+            <h3>Gallery</h3>
+            <div class="container  galery-container">
+                <div id="animated-thumbnails" class="col-md-4 col-sm-12">
+                    <a href="Assets/Img/sm5.jpg">
+                        <div class="card"
+                             style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
+                            <div class="card-description">
+                            </div>
+                        </div>
+                    </a>
                 </div>
+
+
             </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-            <div class="card"
-                 style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                <div class="card-description">
-                </div>
-                <a class="card-link" href="Gallery.html"> </a>
-            </div>
+            <a href="Gallery.html"><p>@todo pagination</p></a>
         </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <div class="card"
-                     style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                    <div class="card-description">
-                    </div>
-                    <a class="card-link" href="Gallery.html"> </a>
-                </div>
-            </div>
 
-
-
-        </div>
-        <a href="Gallery.html"> <p>@todo pagination</p></a>
+    </section>
+</main>
+<section >
+    <h1 class="gallery-title">Gallery</h1>
+    <div class="galery">
+        <a href="Assets/Img/sm5.jpg">
+            <img src="Assets/Img/sm5.jpg" alt="">
+        </a> <a href="Assets/Img/sm5.jpg">
+        <img src="Assets/Img/sm5.jpg" alt="">
+    </a> <a href="Assets/Img/sm5.jpg">
+        <img src="Assets/Img/sm5.jpg" alt="">
+    </a> <a href="Assets/Img/sm5.jpg">
+        <img src="Assets/Img/sm5.jpg" alt="">
+    </a><a href="Assets/Img/sm5.jpg">
+        <img src="Assets/Img/sm5.jpg" alt="">
+    </a> <a href="Assets/Img/sm5.jpg">
+        <img src="Assets/Img/sm5.jpg" alt="">
+    </a> <a href="Assets/Img/sm5.jpg">
+        <img src="Assets/Img/sm5.jpg" alt="">
+    </a> <a href="Assets/Img/sm5.jpg">
+        <img src="Assets/Img/sm5.jpg" alt="">
+    </a><a href="Assets/Img/sm5.jpg">
+        <img src="Assets/Img/sm5.jpg" alt="">
+    </a> <a href="Assets/Img/sm5.jpg">
+        <img src="Assets/Img/sm5.jpg" alt="">
+    </a> <a href="Assets/Img/sm5.jpg">
+        <img src="Assets/Img/sm5.jpg" alt="">
+    </a> <a href="Assets/Img/sm5.jpg">
+        <img src="Assets/Img/sm5.jpg" alt="">
+    </a>
     </div>
 
 </section>
-</main>
 <footer>
     <section id="Footer">
         <div class="footer-dark">
@@ -288,6 +160,7 @@
         crossorigin="anonymous "></script>
 <script src="https://kit.fontawesome.com/3818e49a5f.js" crossorigin="anonymous"></script>
 <script src="Assets/Js/owl.carousel.js "></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js" integrity="sha512-b4rL1m5b76KrUhDkj2Vf14Y0l1NtbiNXwV+SzOzLGv6Tz1roJHa70yr8RmTUswrauu2Wgb/xBJPR8v80pQYKtQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="Assets/Js/script.js "></script>
 </body>
 
