--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <link rel="stylesheet" href="Assets/Style/owl.carousel.min.css">
     <link rel="stylesheet" href="Assets/Style/owl.theme.default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css"
+          integrity="sha512-kwJUhJJaTDzGp6VTPBbMQWBFUof6+pv0SM3s8fo+E6XnPmVmtfwENK0vHYup3tsYnqHgRDoBDTJWoq7rnQw2+g=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="Assets/Style/style.css">
 
 
@@ -22,7 +25,7 @@
         <div id="Nav" class="navbar navbar-expand-md navbar-light fixed-top ">
             <div class="container">
                 <div class="Logo d-flex">
-                    <img src="Assets/Img/Logo3.png" alt="">
+                    <a href="Index.html"><img src="Assets/Img/Logo3.png" alt=""></a>
                 </div>
                 <!-- <a class="navbar-brand" href="#">Navbar</a> -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColl"
@@ -141,38 +144,23 @@
             </div>
         </div>
     </section>
-    <section id="Galery">
-        <div class="Galery-container">
-            <h3>Gallery</h3>
-            <div class="container  galery-container">
-                <div class="col-md-4 col-sm-12">
-                    <div class="card"
-                         style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                        <div class="card-description">
-                        </div>
-                        <a class="card-link" href="Gallery.html"> </a>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-12">
-                    <div class="card"
-                         style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                        <div class="card-description">
-                        </div>
-                        <a class="card-link" href="Gallery.html"> </a>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-12">
-                    <div class="card"
-                         style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                        <div class="card-description">
-                        </div>
-                        <a class="card-link" href="Gallery.html"> </a>
-                    </div>
-                </div>
 
-            </div>
-            <a href="Gallery.html"> <p>See All</p></a>
+
+    <section id="Galery">
+        <h3 class="gallery-title-hm ">Galery</h3>
+        <div class="galery">
+            <a href="Assets/Img/sm5.jpg" class="hg">
+                <img src="Assets/Img/sm5.jpg" alt="">
+            </a>
+            <a href="Assets/Img/sm5.jpg" class="hg">
+                <img src="Assets/Img/sm5.jpg" alt="">
+            </a>
+            <a href="Assets/Img/sm5.jpg" class="hg">
+                <img src="Assets/Img/sm5.jpg" alt="">
+            </a>
+            </a>
         </div>
+        <p class="see-all"><a href="Gallery.html" >See All</a></p>
         </div>
     </section>
     <section id="Home-parallax">
@@ -259,6 +247,9 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl "
         crossorigin="anonymous "></script>
 <script src="https://kit.fontawesome.com/3818e49a5f.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"
+        integrity="sha512-b4rL1m5b76KrUhDkj2Vf14Y0l1NtbiNXwV+SzOzLGv6Tz1roJHa70yr8RmTUswrauu2Wgb/xBJPR8v80pQYKtQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="Assets/Js/owl.carousel.js "></script>
 <script src="Assets/Js/script.js "></script>
 </body>
