--- a/Menu.html
+++ b/Menu.html
@@ -70,15 +70,13 @@
     <section id="Menu" class="menu">
         <ul class="nav nav-pills justify-content-center">
             <li class="nav-item">
+                <a class="nav-link  custom-btn active " data-toggle="pill" href="#drink">drink</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="pill" href="#drink">drink</a>
+                <a class="nav-link  custom-btn " data-toggle="pill" href="#burger">burger</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="pill" href="#burger">burger</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="pill" href="#meat">meat</a>
+                <a class="nav-link   custom-btn " data-toggle="pill" href="#meat">meat</a>
             </li>
 
         </ul>
